--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,6 +20,7 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
+    "jest": "^27.4.4",
     "live-server": "^1.1.0",
     "mocha": "^9.1.3",
     "webpack": "^5.65.0",
