--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "start": "nodemon server/index.js",
-    "build": "webpack --watch"
+    "build": "webpack --watch",
+    "test": "mocha"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "path": "^0.12.7",
