--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "nodemon server/index.js",
-    "build": "webpack --watch"
+    "build": "webpack --watch",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -20,9 +21,11 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
+    "chai": "^4.3.4",
     "jest": "^27.4.4",
     "live-server": "^1.1.0",
     "mocha": "^9.1.3",
+    "react-test-renderer": "^17.0.2",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
