--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "eslint": "^8.4.1",
+    "eslint-plugin-react": "^7.27.1",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "nodemon": "^2.0.15",
