--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "eslint": "^8.4.1",
     "eslint-plugin-react": "^7.27.1",
     "express": "^4.17.1",
