--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/eslint-parser": "^7.16.5",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
+    "@testing-library/react": "^12.1.2",
     "babel-loader": "^8.2.3",
     "chai": "^4.3.4",
     "jest": "^27.4.4",
