--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@babel/eslint-parser": "^7.16.5",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "babel-loader": "^8.2.3",
     "chai": "^4.3.4",
     "jest": "^27.4.4",
     "live-server": "^1.1.0",
     "mocha": "^9.1.3",
+    "msw": "^0.36.3",
     "react-test-renderer": "^17.0.2",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
