--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-react": "^7.27.1",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "react": "^17.0.2",
