--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.4.1",
     "eslint-plugin-react": "^7.27.1",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "nodemon": "^2.0.15",
