--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "axios": "^0.24.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "eslint": "^8.4.1",
     "eslint-plugin-react": "^7.27.1",
