--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mocha": "^9.1.3",
     "msw": "^0.36.3",
     "react-test-renderer": "^17.0.2",
+    "terser-brunch": "^4.1.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
