--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "eslint": "^8.4.1",
     "eslint-plugin-react": "^7.27.1",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.1.1",
     "follow-redirects": "^1.14.7",
     "form-data": "^4.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "nodemon": "^2.0.15",
@@ -43,13 +45,20 @@
     "@testing-library/user-event": "^13.5.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "babel-loader": "^8.2.3",
+    "brotli-webpack-plugin": "^1.1.0",
     "chai": "^4.3.4",
+    "compression-webpack-plugin": "^9.2.0",
+    "css-loader": "^6.5.1",
     "enzyme": "^3.11.0",
+    "image-minimizer-webpack-plugin": "^3.2.3",
+    "imagemin": "^8.0.1",
     "jest": "^27.4.4",
     "live-server": "^1.1.0",
     "mocha": "^9.1.3",
     "msw": "^0.36.3",
     "react-test-renderer": "^17.0.2",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
