--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,7 @@ client/dist/bundle.js.br
 client/dist/bundle.js.gz
 client/dist/bundle.js.map.br
 client/dist/bundle.js.map.gz
-client/dist/bundle.js.LICENSE.text
-client/dist/bundle.js.LICENSE.text.br
-client/dist/bundle.js.LICENSE.text.gz
 
-
+client/dist/bundle.js.LICENSE.txt
+client/dist/bundle.js.LICENSE.txt.br
+client/dist/bundle.js.LICENSE.txt.gz
